--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 header {
     border: 2px solid green;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0 41px;
 }
 
 nav ul {
@@ -45,22 +46,49 @@ nav ul li a {
     border: 2px solid black;
     padding: 10px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .text_container {
-    height: 200px;
-    background-color: gainsboro;
     padding: 10px;
     margin: 10px;
     border: 2px solid black;
 }
 
+.text_container h1 {
+    font-size: 52px;
+    font-weight: 700;
+    color: #3A3A3A;
+}
+
+.text_container p {
+    color: #3A3A3A;
+    font-weight: 600;
+    flex: 3;
+}
+
 .image_container {
-    height: 200px;
-    background-color: hotpink;
     margin: 10px;
-    border: 1px solid blue;
+    border: 1px solid #F1E4FF;
+    border-radius: 50%;
+    flex: 2;
+}
+
+.image_container img {
+    height: 414px;
+    width: 440px;
+}
+
+button {
+    background-color: #E02C6D;
+    padding: 5px 15px;
+    color: white;
+    font-weight: bold;
+    border: none;
+    outline: none;
+    border-radius: 20px;
+    cursor: pointer;
+    margin-top: 10px;
 }
 
 
