--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ nav ul li a {
     padding: 10px;
     display: flex;
     justify-content: space-evenly;
+    margin: 10px 0;
 }
 
 .text_container {
@@ -93,3 +94,58 @@ button {
 
 
 /* First Section design ends */
+
+
+/* Logo section starts */
+
+.logo_container {
+    width: 100%;
+    border-top: 2px solid lightgray;
+    border-bottom: 2px solid lightgray;
+    display: flex;
+    justify-content: space-around;
+    padding: 30px 0;
+    flex-wrap: wrap;
+}
+
+
+/* Logo section ends */
+
+
+/* Popular Collection section starts */
+
+.popular_collection {
+    border: 2px solid black;
+    padding: 10px;
+    justify-content: space-evenly;
+    margin: 10px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.popular_collection h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #3A3A3A;
+}
+
+.card_container {
+    border: 3px solid slateblue;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    width: 80%;
+    padding: 10px 0;
+}
+
+.card {
+    height: 476px;
+    width: 329px;
+    justify-self: center;
+    border: 2px solid black;
+}
+
+
+/* Popular Collection section ends */
