--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -10,6 +12,7 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 0 41px;
+    margin: 30px;
 }
 
 nav ul {
@@ -47,12 +50,12 @@ nav ul li a {
     padding: 10px;
     display: flex;
     justify-content: space-evenly;
-    margin: 10px 0;
+    margin: 20px 0;
 }
 
 .text_container {
     padding: 10px;
-    margin: 10px;
+    margin: 45px;
     /* border: 2px solid black; */
 }
 
@@ -208,3 +211,83 @@ button {
 
 
 /* Popular Collection section ends */
+
+
+/* Contact Section starts */
+
+form {
+    /* display: flex; */
+    flex-direction: column;
+    background-color: #787885;
+    padding: 50px;
+    /* justify-content: left; */
+    width: 50%;
+    border-radius: 5px;
+    background-image: linear-gradient(rgba(94, 99, 102, 0.856), rgba(94, 99, 102, 0.746)), url(images/lights.png);
+    background-size: 100% 100%;
+    background-attachment: fixed;
+}
+
+input[type="text"] {
+    width: 98%;
+    padding: 20px;
+    margin: 10px 0;
+    border: none;
+    border-radius: 5px;
+}
+
+input[type="email"] {
+    width: 98%;
+    padding: 20px;
+    margin: 10px 0;
+    border-radius: 5px;
+    border: none;
+}
+
+textarea {
+    width: 98%;
+    padding: 20px;
+    margin: 10px 0;
+    border-radius: 5px;
+    border: none;
+}
+
+form h2 {
+    text-align: center;
+    color: #3A3A3A;
+    border-radius: 5px;
+    border: none;
+    color: white
+}
+
+form .btn {
+    padding: 10px 15px;
+    font-size: 20px;
+}
+
+
+/* Contact Section ends */
+
+
+/* Footer section starts */
+
+footer {
+    border: 1px solid black;
+    text-align: center;
+    background-color: #0A0826;
+    color: white;
+    margin: 0;
+    padding: 30px 0;
+}
+
+footer h2,
+p {
+    margin: 0 auto;
+}
+
+.icons i {
+    margin: 5px 10px;
+}
+
+
+/* Footer section ends */
