--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@ header {
     margin: 30px;
 }
 
+#cbox {
+    display: none;
+}
+
+.nav_toggler {
+    display: none;
+}
+
 nav ul {
     display: flex;
     list-style: none;
@@ -291,3 +299,110 @@ p {
 
 
 /* Footer section ends */
+
+
+/* ==================== */
+
+
+/* Media Query for Mobile */
+
+@media only screen and (max-width: 600px) {
+    header {
+        flex-wrap: wrap;
+    }
+    .container {
+        flex-direction: column;
+    }
+    .text_container h1 {
+        font-size: 25px;
+        font-weight: 700;
+        color: #3A3A3A;
+    }
+    .text_container p {
+        color: #3A3A3A;
+        font-weight: 600;
+        flex: 3;
+        font-size: 16px;
+        margin-top: 24px;
+    }
+    button {
+        background-color: #E02C6D;
+        padding: 5px 15px;
+        color: white;
+        font-weight: bold;
+        border: none;
+        outline: none;
+        border-radius: 20px;
+        cursor: pointer;
+        margin-top: 37px;
+    }
+    .image_container img {
+        height: 339px;
+        width: 339px;
+    }
+    .card_container {
+        grid-template-columns: 1fr;
+    }
+    .card {
+        width: 90%;
+        justify-self: center;
+        padding: 20px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    form {
+        flex-direction: column;
+        background-color: #787885;
+        padding: 15px;
+        width: 93%;
+        border-radius: 5px;
+        background-image: linear-gradient(rgba(94, 99, 102, 0.856), rgba(94, 99, 102, 0.746)), url(images/lights.png);
+        background-size: 100% 100%;
+        background-attachment: fixed;
+    }
+    input[type="text"] {
+        width: 95%;
+        padding: 8px;
+        margin: 3px 0;
+    }
+    input[type="email"] {
+        width: 95%;
+        padding: 8px;
+        margin: 3px 0;
+    }
+    textarea {
+        width: 95%;
+        padding: 8px;
+        margin: 3px 0;
+    }
+    nav {
+        display: none;
+    }
+    #cbox {
+        /* display: block; */
+        visibility: hidden;
+    }
+    #cbox:checked~nav {
+        display: block;
+    }
+    .nav_toggler {
+        display: block;
+        cursor: pointer;
+    }
+    nav {
+        background-color: #E02C6D;
+        width: 100%;
+        margin: 20px 0;
+    }
+    nav ul {
+        display: flex;
+        list-style: none;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+    nav ul li a {
+        color: white;
+    }
+}
+
+
+/* ==================== */
